# vfd-gds

./: CMakeLists.txt  README.md  license.txt
.github/workflows/: cmake.yml  main.yml  yum.yml
CMake/: Hdf5GdsVfdDetermineVersion.cmake  hdf5_vfd_gds-config-version.cmake.in  hdf5_vfd_gds-config.cmake.in  hdf5_vfd_gds.pc.in
examples/: CMakeLists.txt  simple_dset_write.c
src/: CMakeLists.txt  H5FDgds.c  H5FDgds.h  H5FDgds_err.h
test/: CMakeLists.txt  gds_test.c
